deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeju-istio-demo
  labels:
    app: zeju-istio-demo
spec:
  ports:
    - name: http
      port: 8206
      targetPort: 8206
  selector:
    app: zeju-istio-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeju-istio-demo-v1
  labels:
    app: zeju-istio-demo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeju-istio-demo
      version: v1
  template:
    metadata:
      labels:
        app: zeju-istio-demo
        version: v1
    spec:
      serviceAccountName: zeju-istio-demo-account
      containers:
        - name: zeju-istio-demo
          image: zzeju/istio-demo:1.0
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeju-istio-demo-v2
  labels:
    app: zeju-istio-demo
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeju-istio-demo
      version: v2
  template:
    metadata:
      labels:
        app: zeju-istio-demo
        version: v2
    spec:
      serviceAccountName: zeju-istio-demo-account
      containers:
        - name: zeju-istio-demo
          image: zzeju/istio-demo:2.0
          imagePullPolicy: Always
