deployment/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-destination-rule
  namespace: istio-demo
spec:
  host: zeju-istio-demo
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
