deployment/virtualService-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:

    - match:
        - uri:
            prefix: /test
      route:
        - destination:
            host: zeju-istio-demo
            subset: v1
          weight: 75
        - destination:
            host: zeju-istio-demo
            subset: v2
          weight: 25
