deployment/virtualService-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:

    - match:
        - uri:
            prefix: /test
      route:
        - destination:
            host: zeju-istio-demo
            subset: v1
          weight: 100
      mirror:
        host: zeju-istio-demo
        subset: v2
      mirror_percent: 100
