deployment/virtualService-separate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:

    - match:
        - uri:
            prefix: /v1
      rewrite:
        uri: /
      route:
        - destination:
            host: zeju-istio-demo
            subset: v1
    - match:
        - uri:
            prefix: /v2
      rewrite:
        uri: /
      route:
        - destination:
            host: zeju-istio-demo
            subset: v2
