deployment/virtualService-v2-timeout-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-virtualservice
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: /test
      route:
        - destination:
            host: zeju-istio-demo
            subset: v2

      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      timeout: 10s
